--- a/Front-end/css/style.css
+++ b/Front-end/css/style.css
@@ -60,7 +60,7 @@ body{
 #stts{
     display: grid;
     align-items: center;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto auto auto auto;
     margin-right: 1650px;
     grid-gap: 10px;
     margin-top: 10px;
@@ -81,6 +81,17 @@ body{
     margin-top: -15px;
 }
 
+#hpAtual {
+    width: 35px;
+    text-align: center;
+}
+
 #hpMaximo {
+    text-align: center;
     margin-left: -7px;
+    width: 35px;
+}
+
+#bottomStatus {
+    margin-left: 10px;
 }
